--- a/assets/css/waves.css
+++ b/assets/css/waves.css
@@ -11,7 +11,7 @@
 .waves-effect {
     position: relative;
     cursor: pointer;
-    display: inline-block;
+    display: block;
     overflow: hidden;
     -webkit-user-select: none;
     -moz-user-select: none;
